# nrf91-coap-led-control

./: CMakeLists.txt  Kconfig  README.md  prj.conf  server.py  west.yml
boards/: native_sim.conf
include/: modem.h
src/: main.c  modem.c
